--- a/Code/Convoy_Model.ipynb
+++ b/Code/Convoy_Model.ipynb
@@ -2319,7 +2319,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Although some models are able to fit well to the training data, none fit the test data properly. All test scores are negative indicating models that remain overfit to the data. From here, new features need to be introduced and a larger data sample to capture more varaince.\n",
+    "Although some models are able to fit well to the training data, none fit the test data properly. All test scores are negative indicating models that remain overfit to the data. From here, new features need to be introduced along with a larger data sample to capture more varaince.\n",
     "\n"
    ]
   },
