--- a/Code/Convoy_Model.ipynb
+++ b/Code/Convoy_Model.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This notebook is a preliminary attempt at fitting models to predict overall sink percentage. Subsuquent notebooks refine the models"
+    "This notebook is a preliminary attempt at fitting models to predict overall sink percentage. Subsequent notebooks refine the models"
    ]
   },
   {
