Updated Version of file

--- a/Code/Machine Learning/Convoy_ML_Test.ipynb
+++ b/Code/Machine Learning/Convoy_ML_Test.ipynb
@@ -2,40 +2,43 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Imports\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "from matplotlib.dates import MonthLocator\n",
-    "import matplotlib.dates as mdates\n",
-    "import seaborn as sns\n",
-    "from sklearn.decomposition import PCA\n",
-    "from sklearn.preprocessing import StandardScaler as SS\n",
-    "from sklearn.linear_model import LinearRegression as LinearRegression, Ridge\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.model_selection import train_test_split, KFold, GridSearchCV, TimeSeriesSplit\n",
-    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor, GradientBoostingClassifier\n",
-    "from sklearn.metrics import mean_squared_error, r2_score, accuracy_score, classification_report\n",
-    "from sklearn.neighbors import KNeighborsRegressor\n",
-    "from sklearn.ensemble import RandomForestClassifieru\n",
-    "import xgboost as xgb\n",
-    "from xgboost import XGBRegressor"
+    "from sklearn.model_selection import train_test_split, KFold\n",
+    "from sklearn.ensemble import RandomForestRegressor, GradientBoostingRegressor\n",
+    "from sklearn.metrics import mean_squared_error"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This Notebook is a preliminary test for looking at the differences between various ML models. Going forward, a class-oriented system will be built to test various models instead."
+    "**This Notebook is a preliminary test for looking at the differences between various ML models.**\n",
+    "\n",
+    "Outline of Tests:\n",
+    "\n",
+    "#1 Gradient Boosting Regressor predicting number of ships sunk for convoys at sea greater than 10 days <br>\n",
+    "#2 Random Forest Regressor predicting number of ships sunk for convoys at sea greater than 10 days <br>\n",
+    "#3 Gradient Boosting Regressor predicting number of ships sunk for convoys at sea greater than 5 days <br>\n",
+    "#4 Random Forest Regressor predicting number of ships sunk for convoys at sea greater than 5 days <br>\n",
+    "\n",
+    "#5 Gradient Boosting Regressor predicting overall sink percentage for convoys at sea greater than 10 days <br>\n",
+    "#6 Random Forest Regressor predicting overall sink percentage for convoys at sea greater than 10 days <br>\n",
+    "#7 Gradient Boosting Regressor predicting overall sink percentage for convoys at sea greater than 5 days <br>\n",
+    "#8 Random Forest Regressor predicting overall sink percentage for convoys at sea greater than 5 days <br>\n",
+    "\n",
+    "\n",
+    "Note: These are all regressor models and not the typically classification done for this project. This is done to test differences between models and classifiers and also to identify changes when the time at sea is changed from greater than 10 to greater than 5 days.  "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -199,7 +202,7 @@
        "[3 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,12 +344,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Comparison of Using Overall Sink Percentage vs Number of Ships Sunk and Various cutoffs for time at sea (greater than 10 or 5 days). Time at sea cutoff changes the amount of data used."
+    "**Comparison of Using Overall Sink Percentage vs Number of Ships Sunk and Various cutoffs for time at sea (greater than 10 or 5 days). Time at sea cutoff changes the amount of data used.**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -410,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -426,6 +429,8 @@
     }
    ],
    "source": [
+    "#1\n",
+    "\n",
     "#Gradient Boosting Regressor\n",
     "GB_model = GradientBoostingRegressor(random_state=1945)\n",
     "GB_model.fit(Xtrain, ytrain)\n",
@@ -441,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -457,6 +462,8 @@
     }
    ],
    "source": [
+    "#2\n",
+    "\n",
     "#Random Forest Regressor\n",
     "Ran_Forest_Model = RandomForestRegressor(random_state=1945) #No optimization at this point\n",
     "Ran_Forest_Model.fit(Xtrain, ytrain)\n",
@@ -496,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -512,6 +519,8 @@
     }
    ],
    "source": [
+    "#3\n",
+    "\n",
     "#Gradient Boosting Regressor\n",
     "GB_model = GradientBoostingRegressor(random_state=1945)\n",
     "GB_model.fit(Xtrain, ytrain)\n",
@@ -527,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -543,6 +552,8 @@
     }
    ],
    "source": [
+    "#4\n",
+    "\n",
     "#Random Forest Regressor\n",
     "Ran_Forest_Model = RandomForestRegressor(random_state=1945) #No optimization at this point\n",
     "Ran_Forest_Model.fit(Xtrain, ytrain)\n",
@@ -557,17 +568,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Testing Overall Sink Percentage vs Number of Ships Sunk"
+    "**Testing Overall Sink Percentage vs Number of Ships Sunk**"
    ]
   },
   {
@@ -744,7 +748,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -760,6 +764,8 @@
     }
    ],
    "source": [
+    "#5\n",
+    "\n",
     "#Gradient Boosting Regressor\n",
     "GB_model = GradientBoostingRegressor(random_state=1945)\n",
     "GB_model.fit(Xtrain, ytrain)\n",
@@ -775,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -791,6 +797,8 @@
     }
    ],
    "source": [
+    "#6\n",
+    "\n",
     "#Random Forest Regressor\n",
     "Ran_Forest_Model = RandomForestRegressor(random_state=1945) #No optimization at this point\n",
     "Ran_Forest_Model.fit(Xtrain, ytrain)\n",
@@ -829,7 +837,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -845,6 +853,8 @@
     }
    ],
    "source": [
+    "#7\n",
+    "\n",
     "#Gradient Boosting Regressor\n",
     "GB_model = GradientBoostingRegressor(random_state=1945)\n",
     "GB_model.fit(Xtrain, ytrain)\n",
@@ -860,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -876,6 +886,8 @@
     }
    ],
    "source": [
+    "#8\n",
+    "\n",
     "#Random Forest Regressor\n",
     "Ran_Forest_Model = RandomForestRegressor(random_state=1945) #No optimization at this point\n",
     "Ran_Forest_Model.fit(Xtrain, ytrain)\n",
@@ -888,6 +900,88 @@
     "print('K-Fold Random Forest Regressor Train Score (Mean R\\u00b2):', np.mean(train_scores))\n",
     "print('K-Fold Random Forest Regressor Test Score (Mean R\\u00b2):',np.mean(test_scores))"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# All Results:\n",
+    "\n",
+    "\n",
+    "#1\n",
+    "Gradient Boosting Regressor Train Score (Mean Accuracy): 0.8108159645821675\n",
+    "Gradient Boosting Regressor Test Score (Mean Accuracy): 0.06908893514660186\n",
+    "Gradient Boosting Regressor Mean Squared Error 13.343385511802069\n",
+    "K-Fold Gradient Boosting Train Score (Mean R²): 0.7650187716574124\n",
+    "K-Fold Gradient Boosting Test Score (Mean R²): -0.2242567375852599\n",
+    "\n",
+    "\n",
+    "#2\n",
+    "Random Forest Regressor Train Score (R²): 0.8583704862153498\n",
+    "Random Forest Regressor Test Score (R²): 0.00961583476495087\n",
+    "Random Forest Regressor Mean Squared Error 14.195854169588886\n",
+    "K-Fold Random Forest Regressor Train Score (Mean R²): 0.8574024500793638\n",
+    "K-Fold Random Forest Regressor Test Score (Mean R²): -0.19246932352660823\n",
+    "\n",
+    "\n",
+    "#3\n",
+    "Gradient Boosting Regressor Train Score (Mean Accuracy): 0.7667219579010558\n",
+    "Gradient Boosting Regressor Test Score (Mean Accuracy): 0.05201415377468699\n",
+    "Gradient Boosting Regressor Mean Squared Error 19.485033553328893\n",
+    "K-Fold Gradient Boosting Train Score (Mean R²): 0.7287748550675843\n",
+    "K-Fold Gradient Boosting Test Score (Mean R²): -0.20461029416321042\n",
+    "\n",
+    "\n",
+    "#4\n",
+    "Random Forest Regressor Train Score (R²): 0.8520017273140668\n",
+    "Random Forest Regressor Test Score (R²): 0.15141077335865316\n",
+    "Random Forest Regressor Mean Squared Error 17.442021544876678\n",
+    "K-Fold Random Forest Regressor Train Score (Mean R²): 0.8559517855229009\n",
+    "K-Fold Random Forest Regressor Test Score (Mean R²): -0.1312484101136941\n",
+    "\n",
+    "\n",
+    "#5\n",
+    "Gradient Boosting Regressor Train Score (Mean Accuracy): 0.7924348525211582\n",
+    "Gradient Boosting Regressor Test Score (Mean Accuracy): -0.08432872786347101\n",
+    "Gradient Boosting Regressor Mean Squared Error 3.7027011618594603\n",
+    "K-Fold Gradient Boosting Train Score (Mean R²): 0.7558586254211882\n",
+    "K-Fold Gradient Boosting Test Score (Mean R²): -0.24125934028307872\n",
+    "\n",
+    "#6\n",
+    "Random Forest Regressor Train Score (R²): 0.857097286518973\n",
+    "Random Forest Regressor Test Score (R²): -0.08816053698889137\n",
+    "Random Forest Regressor Mean Squared Error 3.7157857954545452\n",
+    "K-Fold Random Forest Regressor Train Score (Mean R²): 0.8557931261270346\n",
+    "K-Fold Random Forest Regressor Test Score (Mean R²): -0.14126694232031323\n",
+    "\n",
+    "\n",
+    "#7\n",
+    "Gradient Boosting Regressor Train Score (Mean Accuracy): 0.7622364343330639\n",
+    "Gradient Boosting Regressor Test Score (Mean Accuracy): 0.010142099860464104\n",
+    "Gradient Boosting Regressor Mean Squared Error 7.408698774086474\n",
+    "K-Fold Gradient Boosting Train Score (Mean R²): 0.7273958378147681\n",
+    "K-Fold Gradient Boosting Test Score (Mean R²): -0.3011173625045743\n",
+    "\n",
+    "\n",
+    "#8\n",
+    "Random Forest Regressor Train Score (R²): 0.8437771627851679\n",
+    "Random Forest Regressor Test Score (R²): 0.11908060755435956\n",
+    "Random Forest Regressor Mean Squared Error 6.593336702127659\n",
+    "K-Fold Random Forest Regressor Train Score (Mean R²): 0.8535978372528774\n",
+    "K-Fold Random Forest Regressor Test Score (Mean R²): -0.14360055572159672"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Notebook is finished, results will be analyzed elsewhere. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
